cmake_minimum_required(VERSION 3.26)
project(TurboServer)

set(CMAKE_CXX_STANDARD 23)

add_executable(TurboServer
	main.cc

	server/run_args.cc
	server/run_args.hh
	server/turbo_server.cc
	server/turbo_server.hh

	server/entity/entity.cc
	server/entity/entity.hh
	server/entity/entity_type.cc
	server/entity/entity_type.hh
	server/entity/living_entity.cc
	server/entity/living_entity.hh
	server/entity/player/player_entity.cc
	server/entity/player/player_entity.hh
	server/entity/spawn_group.cc
	server/entity/spawn_group.hh
	server/inventory/inventory.cc
	server/inventory/inventory.hh
	server/item/item.cc
	server/item/item.hh
	server/network/network_manager.cc
	server/network/network_manager.hh
	server/network/packet/packet.cc
	server/network/packet/packet.hh
	server/network/packet_buff.cc
	server/network/packet_buff.hh
	server/network/socket/epoll_socket.cc
	server/network/socket/epoll_socket.hh
	server/network/socket/player_socket.cc
	server/network/socket/player_socket.hh
	server/network/socket/server_socket.cc
	server/network/socket/server_socket.hh
	server/network/socket/socket.cc
	server/network/socket/socket.hh
	server/utils/logger/log_level.cc
	server/utils/logger/log_level.hh
	server/utils/logger/logger.cc
	server/utils/logger/logger.hh
	server/utils/logger/logger_va.ii
	server/utils/thread/thread_pool.cc
	server/utils/thread/thread_pool.hh
	server/utils/uuid.cc
	server/utils/uuid.hh
	server/utils/vec.hh
	server/world/world.cc
	server/world/world.hh
	server/world/generators/world_generator.cc
	server/world/generators/world_generator.hh
	server/world/world_manager.cc
	server/world/world_manager.hh
	server/world/info/world_type.cc
	server/world/info/world_type.hh
	server/plugin/iplugin.hh
	server/plugin/plugin_manager.cc
	server/plugin/plugin_manager.hh
	server/network/packet/packet_id.hh
	server/network/varint_exception.cc
	server/network/varint_exception.hh
	server/utils/str_exception.cc
	server/utils/str_exception.hh
	server/network/socket/socket_exception.cc
	server/network/socket/socket_exception.hh
	server/world/block/block.cc
	server/world/block/block.hh
	server/network/packet/handlers/packet_handler.hh
	server/network/network_state.hh
	server/network/socket/socket_closed_exception.cc
	server/network/socket/socket_closed_exception.hh
	server/utils/scheduler/turbo_scheduler.cc
	server/utils/scheduler/turbo_scheduler.hh
	server/utils/scheduler/task.cc
	server/utils/scheduler/task.hh
	server/utils/scheduler/repeating_task.cc
	server/utils/scheduler/repeating_task.hh
	server/utils/scheduler/task_exception.cc
	server/utils/scheduler/task_exception.hh
	server/commands/command_manager.cc
	server/commands/command_manager.hh
	server/commands/command.cc
	server/commands/command.hh
	server/permissions/permission_manager.cc
	server/permissions/permission_manager.hh
	server/permissions/permission.hh
	server/network/packet/handlers/handshaking_packet_handler.cc
	server/network/packet/handlers/handshaking_packet_handler.hh
	server/commands/command_sender.hh
	server/utils/str_utils.cc
	server/utils/str_utils.hh
	server/world/chunk.cc
	server/world/chunk.hh
	server/network/packet/handlers/status_packet_handler.cc
	server/network/packet/handlers/status_packet_handler.hh
	server/network/packet/handlers/login_packet_handler.cc
	server/network/packet/handlers/login_packet_handler.hh
	server/network/packet/handlers/play_packet_handler.cc
	server/network/packet/handlers/play_packet_handler.hh
	server/network/zlib_exception.cc
	server/network/zlib_exception.hh
	server/config/config_manager.cc
	server/config/config_manager.hh
	server/network/protocol_version.cc
	server/network/protocol_version.hh
	server/network/packet/translators/packet_translator.cc
	server/network/packet/translators/packet_translator.hh
	server/utils/identifier.cc
	server/utils/identifier.hh
	server/permissions/group.cc
	server/permissions/group.hh
	server/inventory/inventory_type.cc
	server/inventory/inventory_type.hh
	server/world/generators/structure_generator.cc
	server/world/generators/structure_generator.hh
	server/entity/player/game_mode.cc
	server/entity/player/game_mode.hh
	server/entity/player/player_abilities.hh
	server/world/info/difficulty.cc
	server/world/info/difficulty.hh
	server/world/info/world_border.cc
	server/world/info/world_border.hh
	server/chat/chat_format.cc
	server/chat/chat_format.hh
	server/utils/bounding_box.cc
	server/utils/bounding_box.hh
	server/item/item_stack.cc
	server/item/item_stack.hh
	server/config/iconfig.hh
	server/config/server_config.cc
	server/config/server_config.hh
	server/config/world_config.cc
	server/config/world_config.hh
	server/config/network_config.cc
	server/config/network_config.hh
	server/config/plugins_config.cc
	server/config/plugins_config.hh
	server/config/permissions_config.cc
	server/config/permissions_config.hh
	server/config/json_helper.hh
	server/config/commands_config.cc
	server/config/commands_config.hh
	server/config/anticheat_config.cc
	server/config/anticheat_config.hh
	server/utils/tick/ticker.cc
	server/utils/tick/ticker.hh
	server/utils/tick/tick_times.cc
	server/utils/tick/tick_times.hh
	server/world/info/game_rule.cc
	server/world/info/game_rule.hh
	server/world/info/game_rule_set.cc
	server/world/info/game_rule_set.hh
	server/entity/hand.hh
	server/entity/damage_source.cc
	server/entity/damage_source.hh
	server/inventory/inventory_container.cc
	server/inventory/inventory_container.hh
	server/inventory/player_inventory.cc
	server/inventory/player_inventory.hh
	server/inventory/ender_chest_container.cc
	server/inventory/ender_chest_container.hh
	server/auth/game_profile.cc
	server/auth/game_profile.hh
	server/utils/console/iconsole.hh
	server/utils/console/console_handler.cc
	server/utils/console/console_handler.hh
	server/utils/console/terminal_console.cc
	server/utils/console/terminal_console.hh
	server/utils/console/console_history.cc
	server/utils/console/console_history.hh
	server/utils/console/file_console.cc
	server/utils/console/file_console.hh
	server/utils/profiler/profiler.cc
	server/utils/profiler/profiler.hh
	server/utils/nbt/nbt.cc
	server/utils/nbt/nbt.hh
	server/utils/nbt/tag/nbt_tag_type.hh
	server/bans/ban_manager.cc
	server/bans/ban_manager.hh
	server/bans/punishment_type.cc
	server/bans/punishment_type.hh
	server/bans/punishment.cc
	server/bans/punishment.hh
	server/bans/punishment_builder.cc
	server/bans/punishment_builder.hh
	server/chat/chat_component.hh
	server/chat/chat_font.cc
	server/chat/chat_font.hh
	server/chat/event/click_event.cc
	server/chat/event/click_event.hh
	server/chat/event/click_event_action.cc
	server/chat/event/click_event_action.hh
	server/chat/event/hover_event.hh
	server/chat/event/text_hover_event.cc
	server/chat/event/text_hover_event.hh
	server/chat/event/item_hover_event.cc
	server/chat/event/item_hover_event.hh
	server/chat/event/entity_hover_event.cc
	server/chat/event/entity_hover_event.hh
	server/auth/mojang/mojang_api.cc
	server/auth/mojang/mojang_api.hh
	server/utils/rest/rest.cc
	server/utils/rest/rest.hh
	server/item/itemable.hh
	server/item/item_rarity.cc
	server/item/item_rarity.hh
	server/entity/mob.cc
	server/entity/mob.hh
	server/world/block/state/block_state.cc
	server/world/block/state/block_state.hh
	server/config/velocity_config.cc
	server/config/velocity_config.hh
	server/utils/iserializable.hh
	server/utils/stacktrace/stacktrace.cc
	server/utils/stacktrace/stacktrace.hh
	server/utils/stacktrace/stack_entry.cc
	server/utils/stacktrace/stack_entry.hh
	server/utils/console/stdin_socket.cc
	server/utils/console/stdin_socket.hh
	server/commands/server/stop_command.cc
	server/commands/server/stop_command.hh
	server/commands/server/tps_command.cc
	server/commands/server/tps_command.hh
	server/commands/server/mspt_command.cc
	server/commands/server/mspt_command.hh
	server/commands/server/uptime_command.cc
	server/commands/server/uptime_command.hh
	server/utils/nbt/tag/nbt_tag.hh
	server/utils/nbt/tag/nbt_tag_primitive.cc
	server/utils/nbt/tag/nbt_tag_primitive.hh
	server/utils/nbt/tag/nbt_tag_array.cc
	server/utils/nbt/tag/nbt_tag_array.hh
	server/utils/nbt/tag/nbt_tag_list.cc
	server/utils/nbt/tag/nbt_tag_list.hh
	server/utils/nbt/tag/nbt_tag_compound.cc
	server/utils/nbt/tag/nbt_tag_compound.hh
	server/utils/nbt/tag/nbt_tag_end.cc
	server/utils/nbt/tag/nbt_tag_end.hh
	server/utils/nbt/snbt.cc
	server/utils/nbt/snbt.hh
	server/utils/nbt/tag/nbt_tag.cc
	server/utils/cache/cached_getter.hh
	server/chat/text_chat_component.cc
	server/chat/text_chat_component.hh
	server/chat/translation_chat_component.cc
	server/chat/translation_chat_component.hh
	server/chat/keybind_chat_component.cc
	server/chat/keybind_chat_component.hh
	server/chat/score_chat_component.cc
	server/chat/score_chat_component.hh
	server/chat/chat_component.cc
	server/chat/chat_component_builder.hh
	server/utils/hash.cc
	server/utils/hash.hh
	server/utils/pid.cc
	server/utils/pid.hh
	server/commands/server/version_command.cc
	server/commands/server/version_command.hh
	server/entity/player/player_list.cc
	server/entity/player/player_list.hh
	server/world/generators/overworld/overworld_generator.cc
	server/world/generators/overworld/overworld_generator.hh
)

target_link_libraries(TurboServer z crypto)

target_include_directories(TurboServer PRIVATE "./")
